--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<p>
+<p style="overflow: hidden;" *ngIf="isLogin">
+
   <mat-toolbar>
+
     <button
       mat-icon-button
       class="example-icon"
@@ -7,23 +9,21 @@
     >
       <mat-icon>menu</mat-icon>
     </button>
-    <span>My App</span>
+    <span class="titulo-menu">Inicio</span>
 
-    <!-- <span class="example-spacer"></span>
+    <span class="example-spacer"></span>
+
     <button
       mat-icon-button
       class="example-icon favorite-icon"
       aria-label="Example icon-button with heart icon"
+      (click)="logout()"
     >
-      <mat-icon>favorite</mat-icon>
+      <mat-icon>logout</mat-icon>
     </button>
-    <button
-      mat-icon-button
-      class="example-icon"
-      aria-label="Example icon-button with share icon"
-    >
-      <mat-icon>share</mat-icon>
-    </button> -->
+
   </mat-toolbar>
+
 </p>
+
 <router-outlet></router-outlet>
