--- a/src/app/core/login/login.page.html
+++ b/src/app/core/login/login.page.html
@@ -1,11 +1,19 @@
 <div class="form-container">
-  <form (ngSubmit)="submitForm()" class="form-field">
-    <label for="username">Nome</label>
-    <input id="username" type="text" [(ngModel)]="username" name="username" />
+  <div class="form-field">
+    <form (ngSubmit)="submitForm()">
+      <label for="username">Login</label>
+      <input id="username" type="text" [(ngModel)]="username" name="username" />
 
-    <label for="password">Sobrenome</label>
-    <input id="password" type="password" [(ngModel)]="password" name="password" />
+      <label for="password">Senha</label>
+      <input
+        id="password"
+        type="password"
+        [(ngModel)]="password"
+        name="password"
+        autocomplete
+      />
 
-    <button type="submit">Enviar</button>
-  </form>
+      <button type="submit">Entrar</button>
+    </form>
+  </div>
 </div>
