--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,1 +1,9 @@
-<h2>home</h2>
+<h2>Bem vindo, perfil: {{texto}}</h2>
+<div class="container">
+    <div class="menu" *ngIf="role == 2">Função Adm</div>
+    <div class="menu" *ngIf="role == 2">Função Adm</div>
+    <div class="menu" *ngIf="role == 2">Função Adm</div>
+    <div class="menu" *ngIf="role == 3">Função Pais</div>
+    <div class="menu" *ngIf="role == 3">Função Pais</div>
+    <div class="menu" *ngIf="role == 1">Função Super</div>
+</div>
