tela de registro de pagamento

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <mat-drawer-container hasBackdrop="true" style="height: 100vh;">
   <mat-drawer #drawer mode="over" class="menu-drawer">
-      <h2>Menu</h2>
+      <h2 (click)="drawer.toggle()">Menu</h2>
       <hr>
-      <h3 routerLink="/home">- Inicio </h3>
+      <h3 routerLink="/home" (click)="drawer.toggle()">- Inicio </h3>
   </mat-drawer>
 
   <p style="overflow: hidden" *ngIf="isLogin">
