Historico de pagamentos

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,8 @@
 <h2>Bem vindo, perfil: {{texto}}</h2>
 <div class="container">
-    <div class="menu" routerLink="/matricula" *ngIf="role == 2">Matricula</div>
-    <div class="menu" routerLink="/matricula/listar" *ngIf="role == 2">Lista de Matriculados</div>
+    <div class="menu" *ngIf="role == 2" routerLink="/matricula">Matricula</div>
+    <div class="menu" *ngIf="role == 2" routerLink="/matricula/listar">Lista de Matriculados</div>
+    <div class="menu" *ngIf="role == 2" routerLink="/matricula/historico-pagamento">Historico pagamentos</div>
 
     <div class="menu" *ngIf="role == 2">Registro Pagamento</div>
     <div class="menu" *ngIf="role == 2">Função Adm</div>
